[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Drones/Parts/Frames/Frame1/Frame1.glb" type="PackedScene" id=1]
[ext_resource path="res://Drone.gd" type="Script" id=2]
[ext_resource path="res://FlightController.gd" type="Script" id=3]
[ext_resource path="res://LED.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Drones/Parts/Propellers/Propeller1/Propeller1.glb" type="PackedScene" id=5]
[ext_resource path="res://Assets/Drones/Parts/Motors/Motor1/Motor1.glb" type="PackedScene" id=7]

[node name="Drone1" type="RigidBody"]
mass = 0.7
custom_integrator = true
continuous_cd = true
script = ExtResource( 2 )
projected_area = Vector3( 0.0128, 0.0135, 0.0058 )

[node name="FlightController" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="LEDMode" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.015, 0.045 )

[node name="Frame" parent="." instance=ExtResource( 1 )]

[node name="Motor1" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, 0, -0.08 )
MAX_RPM = 15000.0
RPM_ACCELERATION = 50000.0
MIN_POWER = 5
kv = 2400

[node name="Propeller1" parent="Motor1" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0095, 0 )
radius = 0.065
LIFT_RATIO = 2.2
diameter = 5.1
pitch = 4.8
num_blades = 3
color = Color( 0.784314, 0, 0, 1 )

[node name="Motor2" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.08, 0, -0.08 )
clockwise = false
MAX_RPM = 15000.0
RPM_ACCELERATION = 50000.0
MIN_POWER = 5
kv = 2400

[node name="Propeller2" parent="Motor2" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0095, 0 )
radius = 0.065
LIFT_RATIO = 2.2
diameter = 5.1
pitch = 4.8
num_blades = 3
color = Color( 0.784314, 0, 0, 1 )

[node name="Motor3" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.08, 0, 0.08 )
MAX_RPM = 15000.0
RPM_ACCELERATION = 50000.0
MIN_POWER = 5
kv = 2400

[node name="Propeller3" parent="Motor3" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0095, 0 )
radius = 0.065
LIFT_RATIO = 2.2
diameter = 5.1
pitch = 4.8
num_blades = 3
color = Color( 0.784314, 0, 0, 1 )

[node name="Motor4" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, 0, 0.08 )
clockwise = false
MAX_RPM = 15000.0
RPM_ACCELERATION = 50000.0
MIN_POWER = 5
kv = 2400

[node name="Propeller4" parent="Motor4" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0095, 0 )
radius = 0.065
LIFT_RATIO = 2.2
diameter = 5.1
pitch = 4.8
num_blades = 3
color = Color( 0.784314, 0, 0, 1 )
prop_disk_alpha = 1.5
